# MyNativeTest

./: CMakeCache.txt
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/app/superxlcr/mynativetest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/armeabi/: serviceDaemon
app/src/main/assets/armeabi-v7a/: serviceDaemon
app/src/main/assets/x86/: serviceDaemon
app/src/main/java/com/app/superxlcr/mynativetest/: Command.java  Daemon.java  MainActivity.java  PersistService.java  WakeUpBroadcastReceiver.java
app/src/main/jni/: Application.mk  constant.h
app/src/main/jni/common/: common.c  common.h
app/src/main/jni/daemon/: Android.mk  daemon.c  serviceDaemon.cpp
app/src/main/jni/so/: daemonLib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/app/superxlcr/mynativetest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
